Project-101 kittens carousel website's tamplate added

--- a/101-kittens-carousel-static-website-ec2/Kittens.yaml
+++ b/101-kittens-carousel-static-website-ec2/Kittens.yaml
@@ -31,7 +31,7 @@ Resources:
     Properties:
       ImageId: ami-0bef6cc322bfff646
       InstanceType: t2.micro
-      KeyName: aladag-key
+      KeyName: xxxxxxx
       SecurityGroupIds:
         - !Ref WebServerSecurityGroup
       Tags:
